# pandemia

./: .env.example  .gitignore  .gitlab-ci.yml  .rsync-filter  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  VERSION  ansible.cfg  ansvia-vscode.yaml  build.rs  rustfmt.toml
api-docs/: excludes.yaml  private-api.md  public-api.md
docker/: Dockerfile  README.md  build.sh  build_init_sql.py  docker-compose.yml  start.sh
docker/postgre_server/: Dockerfile
etc/ansible/: api.yml  control_center_web.yml  pandemia.service.j2  pandemia_cc.service.j2  playbook.yml
etc/script/: deploy-analytics.sh  deploy-server.sh  gen_api_docs.py  gen_test_users.py  get_faskes_data.py  includes.sh  patch_districts_meta.py  run-dev.sh  update_records.py
frontends/pandemia_mobile/: .env.example  .gitignore  .metadata  README.md  pubspec.yaml
frontends/pandemia_web/: .browserslistrc  .env.example  LICENSE  (+6 more)
macros/pandemia_proc_macro/: Cargo.toml
macros/pandemia_proc_macro/src/: dao.rs  diagnostic_shim.rs  lib.rs  meta.rs  resolved_at_shim.rs
src/: admin_dao.rs  auth.rs  city_dao.rs  crypto.rs  dao.rs  db.rs  district_dao.rs  district_data_dao.rs  error.rs  eventstream.rs  feed_dao.rs  geolocator.rs  kvstore.rs  lib.rs  macros.rs  map_marker_dao.rs  models.rs  notif_dao.rs  notif_sender.rs  push_notif_handler.rs  record_dao.rs  report_note_dao.rs  result.rs  schema.rs  sqlutil.rs  sub_report_dao.rs  token.rs  types.rs  user_dao.rs  util.rs  valid.rs  village_dao.rs  village_data_dao.rs  web.rs
testkit/: Cargo.toml
testkit/src/: helper.rs  lib.rs
tests/: api.rs  user.rs
(+318 files in other folders)
